--- a/RentMate/requirements.txt
+++ b/RentMate/requirements.txt
@@ -1,6 +1,9 @@
 Django==5.2.7
 djangorestframework==3.14.0
 psycopg2-binary==2.9.7        # if using PostgreSQL in production
-gunicorn==20.1.0             # WSGI server for deployment
+gunicorn==21.2.0             # WSGI server for deployment
 python-dotenv==1.0.0         # if you load .env in production
+whitenoise==6.6.0
+dj-database-url==2.1.0
+psycopg2==2.9.9
 # add any other project dependencies here
