--- a/RentMate/requirements.txt
+++ b/RentMate/requirements.txt
@@ -5,7 +5,7 @@ gunicorn==21.2.0             # WSGI server for deployment
 python-dotenv==1.0.0         # if you load .env in production
 whitenoise==6.6.0
 dj-database-url==2.1.0
-Pillow==10.3.0
+Pillow>=10.0.0,<11.0.0
 asgiref==3.10.0
 sqlparse==0.5.3
 typing-extensions==4.15.0
