--- a/RentMate/requirements.txt
+++ b/RentMate/requirements.txt
@@ -10,4 +10,5 @@ asgiref==3.10.0
 sqlparse==0.5.3
 typing-extensions==4.15.0
 pytz==2025.2
+python-dateutil==2.9.0
 # add any other project dependencies here
